tests/syntax_errors/nested_let_out_of_scope.tjs

module.exports = function(){
   await{ 
      await{
         await{ 
            async.echo(defer(let one), 1);
         }
      }
   }

   if(one === 1){
      throw("never gets here");
   }
};

